Auction_DOS/autograder/sample/student1/results.txt

Using network 'development'.


Compiling your contracts...
===========================
> Compiling ./test/attacker_test.sol

    > compilation warnings encountered:

/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/auction.sol:9:5: Warning: No visibility specified. Defaulting to "public".
    function auction() onlyUninitialised {
    ^ (Relevant source part starts here and spans across multiple lines).
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/auction.sol:14:5: Warning: No visibility specified. Defaulting to "public".
    function bid() payable onlyGreaterValueBids acceptingBids {
    ^ (Relevant source part starts here and spans across multiple lines).
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/auction.sol:20:5: Warning: No visibility specified. Defaulting to "public".
    function endAuction() onlyOwner {
    ^ (Relevant source part starts here and spans across multiple lines).
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/auction.sol:33:38: Warning: "throw" is deprecated in favour of "revert()", "require()" and "assert()".
        if (msg.value <= highestBid) throw;
                                     ^---^
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/auction.sol:38:34: Warning: "throw" is deprecated in favour of "revert()", "require()" and "assert()".
        if (owner != address(0)) throw;
                                 ^---^
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/auction.sol:43:27: Warning: "throw" is deprecated in favour of "revert()", "require()" and "assert()".
        if (!auctionOpen) throw;
                          ^---^
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/auction.sol:48:34: Warning: "throw" is deprecated in favour of "revert()", "require()" and "assert()".
        if (msg.sender != owner) throw;
                                 ^---^
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/attacker.sol:8:5: Warning: No visibility specified. Defaulting to "public".
    function attack(address addr) {
    ^ (Relevant source part starts here and spans across multiple lines).
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/attacker.sol:16:54: Warning: "throw" is deprecated in favour of "revert()", "require()" and "assert()".
        if (auc.getCurrentLeader() == address(this)) throw;
                                                     ^---^
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/user.sol:12:5: Warning: No visibility specified. Defaulting to "public".
    function bid(){
    ^ (Relevant source part starts here and spans across multiple lines).
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/user.sol:16:5: Warning: No visibility specified. Defaulting to "public".
    function bidHighest(){
    ^ (Relevant source part starts here and spans across multiple lines).
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/user.sol:22:54: Warning: "throw" is deprecated in favour of "revert()", "require()" and "assert()".
        if (auc.getCurrentLeader() == address(this)) throw;
                                                     ^---^
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/test/attacker_test.sol:21:5: Warning: No visibility specified. Defaulting to "public".
    function testBefore(){
    ^ (Relevant source part starts here and spans across multiple lines).
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/auction.sol:24:5: Warning: Function state mutability can be restricted to view
    function getHighestBid() public returns (uint) {
    ^ (Relevant source part starts here and spans across multiple lines).
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/auction.sol:28:5: Warning: Function state mutability can be restricted to view
    function getCurrentLeader() public returns (address) {
    ^ (Relevant source part starts here and spans across multiple lines).


Error: Error: Error: while migrating auction: Returned error: VM Exception while processing transaction: revert
    at Object.run (/usr/local/lib/node_modules/truffle/build/webpack:/packages/migrate/index.js:96:1)
    at <anonymous>
    at process._tickCallback (internal/process/next_tick.js:188:7)
Truffle v5.0.41 (core: 5.0.41)
Node v8.10.0
Using network 'development'.


Compiling your contracts...
===========================
> Compiling ./test/attacker_test.sol

    > compilation warnings encountered:

/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/auction.sol:11:5: Warning: No visibility specified. Defaulting to "public".
    function auction() onlyUninitialised {
    ^ (Relevant source part starts here and spans across multiple lines).
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/auction.sol:16:5: Warning: No visibility specified. Defaulting to "public".
    function bid() payable onlyGreaterValueBids acceptingBids {
    ^ (Relevant source part starts here and spans across multiple lines).
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/auction.sol:32:5: Warning: No visibility specified. Defaulting to "public".
    function endAuction() onlyOwner {
    ^ (Relevant source part starts here and spans across multiple lines).
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/auction.sol:45:38: Warning: "throw" is deprecated in favour of "revert()", "require()" and "assert()".
        if (msg.value <= highestBid) throw;
                                     ^---^
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/auction.sol:50:34: Warning: "throw" is deprecated in favour of "revert()", "require()" and "assert()".
        if (owner != address(0)) throw;
                                 ^---^
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/auction.sol:55:27: Warning: "throw" is deprecated in favour of "revert()", "require()" and "assert()".
        if (!auctionOpen) throw;
                          ^---^
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/auction.sol:60:34: Warning: "throw" is deprecated in favour of "revert()", "require()" and "assert()".
        if (msg.sender != owner) throw;
                                 ^---^
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/auction.sol:65:42: Warning: "throw" is deprecated in favour of "revert()", "require()" and "assert()".
        if (msg.sender != currentLeader) throw;
                                         ^---^
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/attacker.sol:8:5: Warning: No visibility specified. Defaulting to "public".
    function attack(address addr) {
    ^ (Relevant source part starts here and spans across multiple lines).
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/attacker.sol:16:54: Warning: "throw" is deprecated in favour of "revert()", "require()" and "assert()".
        if (auc.getCurrentLeader() == address(this)) throw;
                                                     ^---^
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/user.sol:12:5: Warning: No visibility specified. Defaulting to "public".
    function bid(){
    ^ (Relevant source part starts here and spans across multiple lines).
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/user.sol:16:5: Warning: No visibility specified. Defaulting to "public".
    function bidHighest(){
    ^ (Relevant source part starts here and spans across multiple lines).
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/user.sol:22:54: Warning: "throw" is deprecated in favour of "revert()", "require()" and "assert()".
        if (auc.getCurrentLeader() == address(this)) throw;
                                                     ^---^
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/test/attacker_test.sol:21:5: Warning: No visibility specified. Defaulting to "public".
    function testBefore(){
    ^ (Relevant source part starts here and spans across multiple lines).
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/auction.sol:36:5: Warning: Function state mutability can be restricted to view
    function getHighestBid() public returns (uint) {
    ^ (Relevant source part starts here and spans across multiple lines).
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/auction.sol:40:5: Warning: Function state mutability can be restricted to view
    function getCurrentLeader() public returns (address) {
    ^ (Relevant source part starts here and spans across multiple lines).


Error: Error: Error: while migrating auction: Returned error: VM Exception while processing transaction: revert
    at Object.run (/usr/local/lib/node_modules/truffle/build/webpack:/packages/migrate/index.js:96:1)
    at <anonymous>
    at process._tickCallback (internal/process/next_tick.js:188:7)
Truffle v5.0.41 (core: 5.0.41)
Node v8.10.0
